[phmcom] add subcommands

--- a/phmcom-poc/phmcom-cli/Cargo.toml
+++ b/phmcom-poc/phmcom-cli/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1"
-clap = "4"
+clap = { version = "4", features = ["cargo"] }
 dotenv = "0.15"
 
 [[bin]]
