--- a/phmcom-poc/phmcom-cli/Cargo.toml
+++ b/phmcom-poc/phmcom-cli/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 anyhow = "1"
 clap = { version = "4", features = ["cargo"] }
 dotenv = "0.15"
+env_logger = "0.11.5"
+log = "0.4.22"
 
 [[bin]]
 name = "phmcom-cli"
