--- a/phmcom-poc/phmcom-cli/Cargo.toml
+++ b/phmcom-poc/phmcom-cli/Cargo.toml
@@ -9,6 +9,7 @@ clap = { version = "4", features = ["cargo"] }
 dotenv = "0.15"
 env_logger = "0.11.5"
 log = "0.4.22"
+tokio = { version = "1.39.2", features = ["full"] }
 
 [[bin]]
 name = "phmcom-cli"
