--- a/phmcom-poc/phmcom-config/Cargo.toml
+++ b/phmcom-poc/phmcom-config/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+serde = { version = "1.0", features = ["derive"] }
+log = "0.4.22"
+anyhow = "1"
+config = "0.14.0"
